--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Details.cshtml
@@ -1,6 +1,8 @@
 ﻿@model FrotaWeb.Models.FornecedorViewModel
 
-<div>
+<link rel="stylesheet" href="~/css/details.css" asp-append-version="true" />
+
+<div class="container-details">
     <h4>FornecedorViewModel</h4>
     <hr />
     <dl class="row">
@@ -90,7 +92,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="container-buttons">
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
