--- a/Codigo/Frota/FrotaWeb/Views/Manutencao/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Manutencao/Details.cshtml
@@ -1,13 +1,9 @@
 ﻿@model FrotaWeb.Models.ManutencaoViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+<link rel="stylesheet" href="~/css/details.css" asp-append-version="true" />
 
-<h1>Details</h1>
-
-<div>
-    <h4>ManutencaoViewModel</h4>
+<div class="container-details">
+    <h4>Manutencao</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -72,7 +68,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="container-buttons">
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
