--- a/Codigo/Frota/FrotaWeb/Views/Percurso/Details.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Percurso/Details.cshtml
@@ -1,12 +1,8 @@
 ﻿@model FrotaWeb.Models.PercursoViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+<link rel="stylesheet" href="~/css/details.css" asp-append-version="true" />
 
-<h1>Details</h1>
-
-<div>
+<div class="container-details">
     <h4>PercursoViewModel</h4>
     <hr />
     <dl class="row">
@@ -96,7 +92,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="container-buttons">
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
