--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Create.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group w30">
                 <label asp-for="Cpf" class="control-label"></label>
-                <input asp-for="Cpf" class="form-control" />
+                <input asp-for="Cpf" class="form-control" data-mask="000.000.000-00" placeholder="000.000.000-00" />
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group w60">
@@ -44,7 +44,7 @@
             <hr class="divisor">
             <div class="form-group w40">
                 <label asp-for="Cep" class="control-label"></label>
-                <input asp-for="Cep" class="form-control" id="cep" maxlength="9" />
+                <input asp-for="Cep" class="form-control" id="cep" maxlength="9" data-mask="00000-000" placeholder="00000-000" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
             <div class="form-group w50">
